--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.3",
     "core-js": "^3.8.3",
+    "jwt-decode": "^3.1.2",
     "primeicons": "^6.0.1",
     "vue": "^3.2.13",
     "vue-router": "^4.2.4",
